# ais-mqtt

./: .gitignore  Dockerfile  config.yaml  justfile  main.py  pyproject.toml
asusiot_aissens_mqtt/: main.py  mqtt.py  mqtt_config.py  mqtt_consumer.py  mqtt_producer.py  packet_fft.py  packet_processor.py  test_mqtt.py
asusiot_aissens_mqtt/db/: data_saver_interface.py  sqlite.py
asusiot_aissens_mqtt/plugins/: interface.py  packet_common.py  packet_fft.py  packet_oa_only.py  stdout.py
asusiot_aissens_mqtt/plugins/aissens/: packet.py  packet_fft.py  packet_oa_only.py
asusiot_aissens_mqtt/plugins/input/aissens/: config.yaml  packet.py  packet_common.py  packet_fft.py
asusiot_aissens_mqtt/plugins/output/: output_interface.py
asusiot_aissens_mqtt/plugins/output/db/: sqlite.py
asusiot_aissens_mqtt/plugins/output/stdout/: stdout.py
asusiot_aissens_mqtt/tools/sqlite/: config_example.yaml  sqlite.py
asusiot_aissens_mqtt/tools/stdout/: stdout.py
src/: main.py  mqtt.py  mqtt_config.py  mqtt_consumer.py  mqtt_producer.py  note.md
src/config/: config.yaml
src/plugins/: interface.py
src/plugins/aissens/: packet.py  packet_fft.py  packet_oa_only.py  packet_processor.py  packet_test.py
src/plugins/aissens/config/: config.yaml  config_example.yaml
src/tools/: tools_interface.py
src/tools/adx/: .env.template  __init__.py  adx.py  backup_kusto.kql
src/tools/adx/config/: config.yaml  config_example.yaml
src/tools/postgresql/: postgresql.py
src/tools/postgresql/config/: config_example.yaml
src/tools/sqlite/: sqlite.py
src/tools/sqlite/config/: config.yaml
src/tools/stdout/: stdout.py
