[project]
name = "asusiot-aissens-mqtt"
version = "0.1.0"
description = ""
authors = [
    {name = "Chew Chee Wai",email = "chew.cheewai@ynytechnology.com.my"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib (>=3.10.0,<4.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "paho-mqtt (>=2.1.0,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["."]
exclude = [".quicknote"]
venv = ".venv"
venvPath = ["/workspace/rnd/asusiot/data-collector/.venv"]
